z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,8 @@ about-item hr {
 	    background: #eeeeee;
 	    margin-bottom: 20px;
 	    border-radius: 5px;
-	    box-shadow: 0 1px 2px #222;
+        box-shadow: 0 1px 2px #222;
+        z-index: 1;
 	}
 .main i{
     font-size: 1rem;
